tests/resources/valid/error/raise.mamba
class Err(def msg: String) isa Exception(msg)

def f(x: Int) -> Int raises[Err] => if x > 0 then 10 else raise Err("Expected positive number.")

f(10)
f(10) raises [Err]
